Fix projects link font-size on mobile nav to match other items

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -73,4 +73,10 @@
         top: auto;
         bottom: 100%;
     }
+
+    @include mobile {
+        > a.nav-dropdown__link {
+            font-size: $font-size-sm;
+        }
+    }
 }
